@@ -1,5 +1,7 @@
 1.6
 - moved the Audio and Video options to a new tab to allow shrinking the launcher window even more
+- added optional window displaying engine's standard output
+- made the map pack tree view display a horizontal scrollbar when the items are too wide to display instead of clipping
 
 1.5.2
 - ability to insert visual separators into mod list and preset list
